# sst-python-issue

./: .gitignore  package.json  pnpm-lock.yaml  sst-env.d.ts  sst.config.ts
lambdas/python/: main.py  pyproject.toml  sst.pyi
